# azart_app

./: .gitignore  Cargo.toml  build.rs  manifest.yaml  something
assets/: custom.asset  other_custom.asset
assets/corset/: Corset_O.mat  pCube49.mesh
assets/spv/: shader.frag.spv
crates/lib/azart/: Cargo.toml
crates/lib/azart/src/: lib.rs  prelude.rs
crates/lib/azart_asset/: Cargo.toml
crates/lib/azart_asset/src/: lib.rs  previous.rs
crates/lib/azart_asset_derive/: Cargo.toml
crates/lib/azart_asset_derive/src/: lib.rs
crates/lib/azart_ecs/: Cargo.toml
crates/lib/azart_ecs/src/: bitset.rs  lib.rs
crates/lib/azart_gfx/: Cargo.toml  build.rs
crates/lib/azart_gfx/src/: buffer.rs  command_buffer.rs  context.rs  descriptor_set.rs  glb.rs  graphics_pipeline.rs  image.rs  lib.rs  render_pass.rs  render_plugin.rs  render_settings.rs  swapchain.rs  xr.rs  xr_swapchain.rs
crates/lib/azart_gfx/src/pbr/: mesh.rs
crates/lib/azart_gfx/src/render/: base_pass.rs  camera.rs  gpu_scene.rs  mod.rs  plugin.rs  swapchain.rs  xr.rs
crates/lib/azart_gfx_utils/: Cargo.toml
crates/lib/azart_gfx_utils/src/: lib.rs  misc.rs  prelude.rs  spirv.rs
crates/lib/azart_task/: Cargo.toml
crates/lib/azart_task/src/: lib.rs
crates/lib/azart_utils/: Cargo.toml
crates/lib/azart_utils/src/: debug_string.rs  io.rs  lib.rs
crates/lib/vk-sync-rs/: CHANGES.md  Cargo.toml
crates/lib/vk-sync-rs/src/: lib.rs
runtime_libs/: manifest.yaml  vk_layer_settings.txt
runtime_libs/openxr_loader/x86_64/: OpenXRConfig.cmake  OpenXRConfigVersion.cmake
runtime_libs/openxr_loader/x86_64/ARM64_uwp/lib/: openxr_loader.lib
runtime_libs/openxr_loader/x86_64/ARM_uwp/lib/: openxr_loader.lib
runtime_libs/openxr_loader/x86_64/ARM_uwp/lib/cmake/openxr/: OpenXRTargets-relwithdebinfo.cmake
runtime_libs/openxr_loader/x86_64/Win32/lib/cmake/openxr/: OpenXRTargets-relwithdebinfo.cmake
runtime_libs/openxr_loader/x86_64/Win32_uwp/lib/: openxr_loader.lib
runtime_libs/openxr_loader/x86_64/Win32_uwp/lib/cmake/openxr/: OpenXRConfigVersion.cmake  OpenXRTargets-relwithdebinfo.cmake
runtime_libs/openxr_loader/x86_64/x64/lib/cmake/openxr/: OpenXRConfig.cmake
runtime_libs/openxr_loader/x86_64/x64_uwp/lib/cmake/openxr/: OpenXRTargets-relwithdebinfo.cmake  OpenXRTargets.cmake
scripts/compile_gltf/: Cargo.toml
scripts/compile_gltf/src/: main.rs
shaders/: global_bindings.glsl  shader.frag  shader.vert
src/: build.rs  lib.rs  main.rs
src/azart/: mod.rs
src/azart/assets/: image.rs
src/azart/gfx/: buffer.rs  command_buffer.rs  context.rs  graphics_pipeline.rs  image.rs  misc.rs  mod.rs  render_loop.rs  render_pass.rs  render_plugin.rs  swapchain.rs  utils.rs  window.rs
src/azart/utils/: debug_string.rs  mod.rs
src/main/assets/: something.txt
