[package]
name = "azart_app"
version = "0.1.0"
edition = "2024"

[dependencies]
azart = { path = "crates/lib/azart" }
bevy = { version = "0.15.3", default-features = false, features = ["bevy_winit", "bevy_window", "bevy_asset", "multi_threaded"] }
color-eyre = "0.6.3"

[build-dependencies]
azart = { path = "crates/lib/azart" }
color-eyre = "0.6.3"
glsl = "7.0.0"
shaderc = "0.9.1"
walkdir = "2.5.0"
spirv-reflect = "0.2.3"

[profile.release.package."spirv-reflect"]
debug-assertions = false # Crashes.

[profile.dev.package."spirv-reflect"]
debug-assertions = false # Crashes.

[profile.release]
opt-level = 3
strip = "symbols"
debug-assertions = false

[profile.dev]
debug = 1
incremental = true
lto = false
