[package]
name = "azart"
version = "0.1.0"
edition = "2024"

[dependencies]
azart_task = { path = "../azart_task" }
azart_ecs = { path = "../azart_ecs" }
azart_utils = { path = "../azart_utils" }
azart_gfx = { path = "../azart_gfx", optional = true }
azart_asset = { path = "../azart_asset", optional = true }
bevy = { version = "0.15.3", default-features = false, features = ["bevy_winit", "bevy_window", "multi_threaded"] }

[features]
default = ["gfx", "asset"]
gfx = ["azart_gfx"] # Headless applications should disable this feature.
asset = ["azart_asset"]
